OR-1195 -- useampi puu